Integrate NullAway for whole project